Aggiunta seguenti classi API: 	- CartaDiDebitoAPI 	- ContoCorrenteAPI 	- OperazioneCartaDebitoAPI 	- OperazioneContoCorrenteAPI 	- OperazionePrepagataAPI Modifica di tutto il file yaml. Nuova suddivisione package api.
